samples/_failures_safe/1761300025_c41f60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ded2dea7.c:186: error: expected ‘;’, ‘,’ or ‘)’ at end of input
